fix error on mobile

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -59,20 +59,6 @@
     }
 
     .clsCard {
-      // .clsPrice {
-      //   font-weight     : bold;
-      //   padding         : 5px;
-      //   background-color: black;
-      //   color           : white;
-      //   margin          : 5px;
-      //   position        : absolute;
-      //   left            : 0;
-      //   top             : 0;
-      //   border          : 1px solid #4df5c2;
-      //   border-radius   : 5px;
-      //   box-shadow      : 0px 0px 10px 5px #f8f6f6;
-      // }
-
       .card {
         .card-img-top {
           cursor: pointer;
@@ -84,6 +70,20 @@
           .card-title {
             margin-bottom: 0;
           }
+        }
+
+        .clsPrice {
+          font-weight     : bold;
+          padding         : 5px;
+          background-color: black;
+          color           : white;
+          margin          : 5px;
+          position        : absolute;
+          left            : 0;
+          top             : 0;
+          border          : 1px solid #4df5c2;
+          border-radius   : 5px;
+          box-shadow      : 0px 0px 10px 5px #f8f6f6;
         }
       }
     }
